# File-Rename-Pro

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.icon/: File Rename Pro.fig
.icon/IconComposer_FileRenamePro.icon/: icon.json
app/: package.json
app/src/: main.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
src/: index.html  main.js  styles.css  styles.override.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tools/: dir.js  index.js  package.json
tools/.docker/: Dockerfile.debian_based  Dockerfile.rhel_based
tools/utils/: index.js  run.js
