[package]
name = "File-Rename-Pro"
version = "0.3.0"
description = "A lightweight desktop application for batch renaming files."
authors = ["aoaochan"]
edition = "2021"

[lib]
name = "file_rename_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
tauri-plugin-dialog = "2"
